kubernetes/infra/dashy/dashy.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashy-service
  namespace: monitoring
spec:
  selector:
    app: dashy
  ports:
  - name: dashy
    port: 8888

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dashy
  namespace: monitoring
spec:
  replicas: 1
  serviceName: dashy-service
  selector:
    matchLabels:
      app: dashy
  template:
    metadata:
      labels:
        app: dashy
    spec:
      containers:
        - name: dashy
          image: lissy93/dashy:2.1.1
          ports:
            - name: dashy
              containerPort: 8888
              protocol: TCP
          volumeMounts:
            - name: dashy-data
              mountPath: /app/public
            - name: config-volume
              mountPath: /app/public/conf.yml
          livenessProbe:
            tcpSocket:
              port: 8888
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /home
              port: 8888
            initialDelaySeconds: 5
            periodSeconds: 3              
   

  volumeClaimTemplates:
    - metadata:
        name: dashy-data
      spec:
        accessModes: ["ReadWriteOnce"]
        volumeMode: Filesystem
        resources:
          requests:
            storage: 1Gi

      volumes:
      - name: config-volume
        configMap:
          name: dashy-config

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashy-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dashy.guiadodevops.com.br
    secretName: dashy-tls
  rules:
  - host: dashy.guiadodevops.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashy-service
            port:
              number: 8888
